continuo campi fino steinmetz

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -121,6 +121,9 @@
 \renewcommand{\r}{\ensuremath{\vec{r}}}
 \newcommand{\rot}{\ensuremath{\nabla\times}}
 \newcommand{\diverg}{\ensuremath{\nabla\cdot}}
+\renewcommand{\E}{\ensuremath{\vec{E}}}
+\renewcommand{\H}{\ensuremath{\vec{H}}}
+\renewcommand{\J}{\ensuremath{\vec{J}}}
 
 %Derivatives shortcut
 \newcommand{\deriv}[3][]{% \deriv[<order>]{<func>}{<var>}
