--- a/antenne/introduzione.tex
+++ b/antenne/introduzione.tex
@@ -13,13 +13,13 @@ Le rappresentazioni di un punto \textit{\textbf{P}} nelle due coordinate saranno
 
 \section{Operatori differenziali (spaziali)}
 Elenchiamo ora gli operatori che utilizzeremo, per poi definirli meglio in delle loro sottosezioni.
-\begin{description}
-  \item[Operatore Nabla] $ \nabla = \left(\frac{\partial}{\partial x},\frac{\partial}{\partial y},\frac{\partial}{\partial z}\right)$
-  \item[Rotore] $\rot$
-  \item[Divergenza] $\diverg$
-  \item[Gradiente] $\nabla$
-  \item[Laplaciano] $\nabla^2$
-\end{description}
+\begin{itemize}
+  \item \textbf{Operatore Nabla} $ \nabla = \left(\frac{\partial}{\partial x},\frac{\partial}{\partial y},\frac{\partial}{\partial z}\right)$
+  \item \textbf{Rotore} $\rot$
+  \item \textbf{Divergenza} $\diverg$
+  \item \textbf{Gradiente} $\nabla$
+  \item \textbf{Laplaciano} $\nabla^2$
+\end{itemize}
 Iniziamo a descrivere cosa succede a un generico vettore $\vec{A}\left(\r\right)=\left(A_x(\r),A_y(\r),A_z(\r)\right)$.
 \subsection{Rotore}
 \begin{equation} \begin{split}
@@ -73,7 +73,7 @@ vettoriale della divergenza del rotore, si ricaveranno le ultime due equazioni d
 
 \begin{equation}\begin{cases}
   \rot \ert = -\deriv{\brt}{t} \\
-  \rot \hrt = \Jt(\r,t) + \deriv{\drt}{t} \\
+  \rot \hrt = \jt(\r,t) + \deriv{\drt}{t} \\
   \diverg \d = \rho \\
   \diverg \b = 0
 \end{cases}\label{eq:maxwell}\end{equation}
@@ -81,13 +81,13 @@ vettoriale della divergenza del rotore, si ricaveranno le ultime due equazioni d
 I vettori $\e$, $\h$, $\d$, $\b$ sono tutti rappresentabili nella forma
 $$\vec{v}(\r,t) = \left(v_x(\r,t);v_y(\r,t);v_z(\r,t)\right)$$
 Definiamo ora cosa rappresentano i vettori sopra elencati:
-\begin{description}
-  \item[$\ert$] è il vettore campo elettrico $\left[\frac{V}{m}\right]$
-  \item[$\brt$] è il vettore induzione magnetica $[T]$
-  \item[$\hrt$] è il vettore campo magnetico $[A \cdot m]$
-  \item[$\drt$] è il vettore spostamento elettrico $\left[\frac{C}{m^2}\right]$
-  \item[$\Jt$] è il vettore densità totale di corrente elettrica $\left[\frac{A}{m^2}\right]$
-\end{description}
+\begin{itemize}
+  \item \textbf{$\ert$]}è il vettore campo elettrico $\left[\frac{V}{m}\right]$
+  \item \textbf{$\brt$} è il vettore induzione magnetica $[T]$
+  \item \textbf{$\hrt$} è il vettore campo magnetico $[A \cdot m]$
+  \item \textbf{$\drt$} è il vettore spostamento elettrico $\left[\frac{C}{m^2}\right]$
+  \item \textbf{$\jt$} è il vettore densità totale di corrente elettrica $\left[\frac{A}{m^2}\right]$
+\end{itemize}
 
 \subsubsection{Identità vettoriale e ultime due equazioni di Maxwell}
 L'identità vettoriale $\diverg (\rot \vec{A}) = 0$ permette di ricavare
@@ -95,15 +95,15 @@ dalle equazioni ai rotori, le equazioni alle divergenze. In particolare si trova
 \begin{equation}\begin{split}
   \diverg (\rot \ert) &= \diverg \left(-\deriv{\brt}{t}\right)=0 \quad \Leftrightarrow \deriv{\diverg \b}{t}=0\\
   \implies & \diverg \b \text{ è costante nel tempo.}\\
-  \diverg(\rot \h) &= \diverg \Jt + \deriv{\diverg \d}{t}=0
+  \diverg(\rot \h) &= \diverg \jt + \deriv{\diverg \d}{t}=0
 \end{split}\end{equation}
 
 Poiché non esiste il monopolo magnetico, si ottiene che $\diverg\b =0$.\\
 Per valutare il risultato della divergenza del rotore del campo magnetico, abbiamo bisogno della
 \textbf{legge di conservazione della carica elettrica}, che porta come risultato
 \begin{equation}\begin{split}
-  \int_{S_v}\Jt \cdot \hat{n} d S_v &= -\deriv{Q_v}{t} = -\deriv{}{t} \int_V \rho(\r,t) \cdot dV = \int \deriv{\rho(\r,t)}{t} dV\\
-  \int_V \diverg \Jt dV &= - \int \deriv{\rho}{t} dV \Leftrightarrow \diverg \Jt = -\deriv{\rho}{t} \\
+  \int_{S_v}\jt \cdot \hat{n} d S_v &= -\deriv{Q_v}{t} = -\deriv{}{t} \int_V \rho(\r,t) \cdot dV = \int \deriv{\rho(\r,t)}{t} dV\\
+  \int_V \diverg \jt dV &= - \int \deriv{\rho}{t} dV \Leftrightarrow \diverg \jt = -\deriv{\rho}{t} \\
   \deriv{}{t} \left(\diverg \d - \rho \right) &=0 \implies
   \begin{cases}
     \diverg \d - \rho & \text{costante nel tempo} \\
@@ -111,19 +111,19 @@ Per valutare il risultato della divergenza del rotore del campo magnetico, abbia
   \end{cases}
 \end{split}\end{equation}
 La risoluzione delle equazioni di Maxwell porta ad aver 6 equazioni, derivanti
-dalle prime due equazioni (vettoriali) di Maxwell in 15 incognite ($\b , \e , \h , \d , \Jt $ tutte $\in \R^3$)
+dalle prime due equazioni (vettoriali) di Maxwell in 15 incognite ($\b , \e , \h , \d , \jt $ tutte $\in \R^3$)
 
 Si possono ridurre le incognite attraverso le \textbf{relazioni costitutive} o
 \textbf{leggi del legame materiale}. In particolare si riesce ad ottenere
 \begin{equation}
-  \Jt = \vec{J}_{COND} + \vec{j}
+  \jt = \vec{j}_{COND} + \vec{j}
 \end{equation}
 dove la prima è la corrente autoindotta (incognita) e la seconda è la corrente impressa, nota.
 
 Nel vuoto si ha inoltre che:
 \begin{equation}
   \b = \mu_0 \cdot \h \quad \d = \epsilon_0 \e \\
-  \vec{J}_{COND} = 0 \implies \Jt \text{ è nota} \\
+  \vec{j}_{COND} = 0 \implies \jt \text{ è nota} \\
   \label{eq:bh-de-j}
 \end{equation}
 dove
@@ -180,8 +180,8 @@ Abbiamo quindi scoperto la velocità del moto ondoso nel vuoto. D'ora in avanti 
 $c_0 = \frac{1}{\sqrt{\mu_0\epsilon_0}}\stackrel{\approx}{conti} 3 \cdot 10^8 m/s$.
 Possiamo inoltre definire il campo elettromagnetico come \textbf{campo di}
 \begin{description}
-  \item[propagazione] se $\vec{J_s}=\vec{0}$
-  \item[radiazione] se $\vec{J_s}\neq\vec{0}$
+  \item \textbf{[propagazione} se $\vec{J_s}=\vec{0}$
+  \item \textbf{radiazione} se $\vec{J_s}\neq\vec{0}$
 \end{description}
 
 \section{Campo in spazio non vuoto}
@@ -197,13 +197,13 @@ del mezzo}, affinché le correnti di conduzione rispettino la legge di Ohm.
 
 Elenchiamo ora le \textbf{proprietà del mezzo} che andremo a studiare, considerandole vere almeno per volumi
 di spazio sufficientemente piccoli.
-\begin{description}
-  \item[linearità]
-  \item[isotropia]
-  \item[omogeneità] ossia $\epsilon, \mu, \sigma$ rimangono costanti nello spazio considerato
-  \item[tempo-invarianza] ossia le costanti non variano al variare del tempo (temperatura costante)
-  \item[non dispersività] le costanti di propagazione non variano in frequenza
-\end{description}
+\begin{itemize}
+  \item \textbf{linearità}
+  \item \textbf{isotropia}
+  \item \textbf{omogeneità}  ossia $\epsilon, \mu, \sigma$ rimangono costanti nello spazio considerato
+  \item \textbf{tempo-invarianza} ossia le costanti non variano al variare del tempo (temperatura costante)
+  \item \textbf{non dispersività}  le costanti di propagazione non variano in frequenza
+\end{itemize}
 
 D'ora in poi considereremo \textbf{solo mezzi dielettrici}, mezzi per cui $\mu \approx \mu_0$, per cui
 le equazioni di Maxwell rimarranno invariate nel mezzo e le costanti saranno $\epsilon, \mu_0$ e $\sigma$
@@ -244,4 +244,26 @@ scrivere $\ert = \Re\left[\E(\r)\cdot e^{\jmath \omega t}\right]$. Avremo quindi
   &=\sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} E_n(\r)\cdot \Re\left[e^{\jmath \Phi_{E_n}(\r)}\cdot e^{\jmath \omega t}\right]\\
   &=\sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} E_n(\r)\cdot cos[\omega t + \Phi_{E_n}(\r)]
 \end{split}\end{equation}
-Analogamente si ottengono ke
+Analogamente si ottengono le uguaglianze per il campo magnetico e per le correnti.
+
+Cerchiamo ora di scrivere le equazioni di Maxwell utilizzando i vettori di Steinmets:
+\begin{equation}\begin{split}
+  \rot \e &= \rot \Re\left[\E(\r) \cdot e^{\jmath\omega t}\right] = \Re\left[\rot\E(\r) \cdot e^{\jmath\omega t}\right]\\
+  &\text{otteniamo quindi che:}\\
+  \rot\e &\rightarrow \rot\E \quad \text{corrispondenza biunivoca} \\
+  \diverg\e &\rightarrow \diverg\E \quad \text{corrispondenza biunivoca} \\
+  \deriv{\e}{t} & \rightarrow \jmath \omega \E\quad \text{trasformata di Fourier} \\
+\end{split}\end{equation}
+
+\subsection{Equazioni di Maxwell in regime sinusoidale}
+Le equazioni di Maxwell, nel caso del regime sinusoidale si possono riscrivere come
+\begin{equation}\begin{cases}
+  \rot\E(\r) = -\jmath \omega \mu\H(\r) \\
+  \rot\H(\r) = \jmath  \omega \epsilon \E(\r) + \J(\r) + \sigma\E = \J(\r) +(\sigma + \jmath \omega \epsilon) \cdot \E(\r) = \J(\r) +\jmath \omega \epsilon_c \cdot \E(\r) \\
+  \diverg\H(\r)=0\\
+  \diverg \E(\r) = \frac{\rho_T(\r)}{\epsilon} & \rho \text{ varia in regime sinusoidale}
+\end{cases}\end{equation}
+Con $\epsilon_c = \epsilon + \frac{-\jmath\sigma}{\omega}$ \textbf{costante di permittività
+dielettrica complessa}
+
+Andiamo ad analizzare ora i diversi tipi di mezzi al variare di $\epsilon_c$
