Added \vec{s} alias

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -119,6 +119,7 @@
 \newcommand{\drt}{\ensuremath{\vec{d}(\vec{r},t)}}
 \newcommand{\Jt}{\ensuremath{\vec{J}_T}}
 \renewcommand{\r}{\ensuremath{\vec{r}}}
+\newcommand{\s}{\ensuremath{\vec{s}}}
 \newcommand{\rot}{\ensuremath{\nabla\times}}
 \newcommand{\diverg}{\ensuremath{\nabla\cdot}}
 \renewcommand{\E}{\ensuremath{\vec{E}}}
