--- a/antenne/introduzione.tex
+++ b/antenne/introduzione.tex
@@ -3,13 +3,13 @@
 Nel corso verranno utilizzate principalmente due sistemi di riferimento: quello
 con coordinate \textbf{cartesiane} e quello con coordinate \textbf{sferiche}.
 Le rappresentazioni di un punto \textit{\textbf{P}} nelle due coordinate saranno le seguenti:
-\begin{equation}
-  P=(x,y,z) = \r = x \cdot \hat{x} + y \cdot \hat{y} +z \cdot \hat{z}  \quad \r\text{ è il vettore posizione} \\
-  x \bot y \bot z \bot x \\
-  P=(r,\theta,\phi) = r \cdot \hat{r} = r \cdot \hat{r}(\theta,\phi)\\
-  r \bot \theta \bot \phi \bot r
+\begin{equation} \begin{split}
+  P&=(x,y,z) = \r = x \cdot \hat{x} + y \cdot \hat{y} +z \cdot \hat{z}  \quad \quad \r&\text{ è il vettore posizione} \\
+  x &\perp y \perp z \perp x \\
+  P&=(r,\theta,\phi) = r \cdot \hat{r} = r \cdot \hat{r}(\theta,\phi)\\
+  r &\perp \theta \perp \phi \perp r
   \label{eq:riferimento}
-\end{equation}
+\end{split}\end{equation}
 
 \section{Operatori differenziali (spaziali)}
 Elenchiamo ora gli operatori che utilizzeremo, per poi definirli meglio in delle loro sottosezioni.
