Aggiunto capitolo onde piane, manca un pezzetto

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -22,6 +22,7 @@
 \usepackage{mathtools}
 \usepackage{amsthm}
 \usepackage{amsmath, amssymb, dsfont, bm,blkarray}
+\usepackage{cases}
 
 % tikz figures
 \usepackage[usenames, dvipsnames, table, tikz]{xcolor}
@@ -120,6 +121,8 @@
 \newcommand{\jt}{\ensuremath{\vec{j}_T}}
 \renewcommand{\r}{\ensuremath{\vec{r}}}
 \newcommand{\s}{\ensuremath{\vec{s}}}
+\renewcommand{\a}{\ensuremath{\vec{a}}}
+\renewcommand{\k}{\ensuremath{\vec{k}}}
 \newcommand{\rot}{\ensuremath{\nabla\times}}
 \newcommand{\diverg}{\ensuremath{\nabla\cdot}}
 \renewcommand{\E}{\ensuremath{\vec{E}}}
