Aggiunto ambiente esp* (stellina)

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -139,6 +139,12 @@
 \end{split}\end{equation}
 }
 
+\NewEnviron{esp*}{%
+\begin{equation*}\begin{split}
+  \BODY
+\end{split}\end{equation*}
+}
+
 \begin{document}
 
 \begin{titlepage}
