--- a/antenne/polarizzazione.tex
+++ b/antenne/polarizzazione.tex
@@ -1,4 +1,4 @@
-\chapter{Polarizzazione del campo elettromagnetico}
+\chapter{Polarizzazione del campo \textsc{EM}}
 Andremo ora ad analizzare come si comporta il campo elettromagnetico nello spazio, in particolare la sua evoluzione e i casi degeneri.
 
 Iniziamo con un'analisi nel dominio del tempo del campo, prestando attenzione alla differenza con il corso di Fisica 2: mentre nell'altro corso si è osservata la polarizzazione del mezzo, ora analizzeremo la polarizzazione dell'onda elettromagnetica.
@@ -7,21 +7,35 @@ Iniziamo con un'analisi nel dominio del tempo del campo, prestando attenzione al
   &= \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot cos(\omega t)\cdot cos\left[ \phi_{E_n}(\r)\right] - sin(\omega t)\cdot sin\left[ \phi_{E_n}(\r)\right]\\
   &=cos(\omega t) \cdot \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot cos \left[ \phi_{E_n}(\r) \right] \\
   &+sin(\omega t) \cdot \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot sin \left[ \phi_{E_n}(\r) \right] \\
-  \implies \ert &= \E^R(\r)\cdot cos(\omega t) - \E^I(\r)\cdot sin(\omega t)
-&\text{with } \\
-\E^R(\r) &= \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot cos \left[ \phi_{E_n}(\r) \right] \\
-\E^I(\r) &= \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot sin \left[ \phi_{E_n}(\r) \right]
 \end{esp}
 
-Possiamo quindi dire che $\e(\r,0) = \E^R(\r)$ se $t=0$ e $\e(\r,\frac{pi}{2\omega}) = -\E^I(\r)$
+Raggruppando i termini, si ha in conclusione che
+\begin{equation} \label{eq:ert}
+	\ert = \E^R(\r)\cdot cos(\omega t) - \E^I(\r)\cdot sin(\omega t)
+\end{equation}
 
-\textsc{Possiamo quindi affermare che}
+\newpage
+con il vettore di Steinmetz del campo elettrico scomposto in parte reale e immaginaria
+\begin{equation*} \begin{dcases}
+	\E^R(\r) &= \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot cos \left[ \phi_{E_n}(\r) \right] \\
+	\E^I(\r) &= \sum\limits_{n=1}^3 \hat{x}_n^{\prime\prime} \cdot \E_n(\r)\cdot sin \left[ \phi_{E_n}(\r) \right]
+\end{dcases} \end{equation*}
+
+Possiamo osservare il vettore di Steinmetz si può ottenere direttamente dalla formula del campo
+\begin{equation*} \begin{dcases}
+	\e(\r, t=0) = \E^R(\r) \\
+	\e \left( \r, t = \frac{pi}{2\omega} \right) = -\E^I(\r)
+\end{dcases} \end{equation*}
+
+\paragraph{Proprietà di polarizzazione del campo}
+A partire dall'equazione \ref{eq:ert} possiamo osservare alcune simmetrie del campo $\E$:
 \begin{enumerate}
-  \item Il campo elettromagnetico giace in un dato punto $\r$ su un piano di polarizzazione, qualunque t si scelga
-  \item Il campo elettromagnetico traccia una curva chiusa
-  \item La curva chiusa, in genere, è un ellisse.
+  \item il campo elettromagnetico giace sempre su un piano di polarizzazione, qualunque $t$ si scelga
+  \item il campo elettromagnetico traccia una curva chiusa
+  \item la curva chiusa è, in generale, un ellisse
 \end{enumerate}
-In generale possiamo scrivere
+
+Queste affermazioni possono essere provate come segue
 \begin{esp}
   \E^R &= E^R_{x\prime} \cdot \hat{x}\prime+E^R_{y\prime} \cdot \hat{y}\prime \\
   \E^I &= E^I_{x\prime} \cdot \hat{x}\prime+E^I_{y\prime} \cdot \hat{y}\prime \\
@@ -52,18 +66,21 @@ Passando quindi alle coordinate cartesiane principali, si ottiene
   \pm b \cdot sin(\omega t + \Phi)
 \end{pmatrix}
 \end{esp}
-dove $a,b \in \R^+$ indicano il valore dei semiassi dell'ellisse, mentre il $\pm$ indica il verso \textbf{destrorso} o \textbf{sinistrorso} della polarizzazione ellittica del campo elettrico. Ci sono ora due casi degeneri principali:
+dove $a,b \in \R^+$ indicano il valore dei semiassi dell'ellisse, mentre il $\pm$ indica il verso \emph{destrorso} o \emph{sinistrorso} della polarizzazione ellittica del campo elettrico. Ci sono ora due casi degeneri principali:
 \begin{enumerate}
   \item $a = b$ l'ellisse degenera in una circonferenza, per cui la polarizzazione sarà circolare destrorsa o sinistrorsa
   \item $\begin{cases}a=0 \\ b \neq 0 \end{cases} \vee  \begin{cases}a\neq 0 \\ b = 0 \end{cases}$ l'ellisse degenera in un segmento e la polarizzazione sarà rettilinea verticale o orizzontale.
 \end{enumerate}
-Passando ora ai vettori di Steinmetz
+
+Queste proprietà si posso ricavare anche con i vettori di Steinmetz
 \begin{esp}
   \e(t) &= \Re[\E\cdot e^{\jmath \omega t}] \quad \E \in \C^3 \\
-  &=\Re\left[\left(\E^R + \jmath \E^I\right)\cdot\left(cos(\omega t) + \jmath sin(\omega t)\right)\right] = \E^R \cdot cos(\omega t) - \E^I\cdot sin(\omega t) \\
+  &=\Re\left[\left(\E^R + \jmath \E^I\right)\cdot\left(\cos(\omega t) + \jmath \sin(\omega t)\right)\right] \\
+	&= \E^R \cdot cos(\omega t) - \E^I\cdot sin(\omega t) \\
   &= a \cdot cos(\omega t + \Phi)\cdot \hat{x} \pm b \cdot sin(\omega t + \Phi)\cdot \hat{y}
 \end{esp}
-In un sistema di riferimento ruotato di un angolo $\delta$ l'uguaglianza si può scrivere nella seguente forma matriciale
+
+Ruotando il sistema di riferimento di un angolo $\delta$ la proprità resta valida: è sufficiente applicare la corrispodente trasformazione ai campi considerati.
 \begin{equation}
   \begin{pmatrix} E_{x\prime} \\ E_{y\prime} \end{pmatrix} =
   \begin{pmatrix}
@@ -77,26 +94,33 @@ Definiamo il rapporto di polarizzazione $p$ nel sistema di assi principali come
 \begin{equation}
   p = \jmath \frac{E_y}{E_x} \in \C
 \end{equation}
-mentre in un sistema di assi generico, si ottiene
+mentre in un sistema di assi generico, si ottiene, in modo analogo alle linee di trasmissione,
 \begin{equation}
-  p\prime = \jmath \frac{E_y}{E_x} = \frac{p - \jmath tg(\delta)}{1-\jmath p \cdot tg(\delta)} \quad \text{simile a linee di trasmissione}
+  p\prime = \jmath \frac{E_y}{E_x} = \frac{p - \jmath tg(\delta)}{1-\jmath p \cdot tg(\delta)}
 \end{equation}
-Interessante notare come, per qualsiasi angolo $\delta$ il segno di $p\prime$ non cambi.
-Osservando ora i possibili valori di $p\prime \in \C$, distinguiamo i diversi tipi di polarizzazione
+Risulta interessante notare come, per qualsiasi angolo $\delta$ il segno di $p\prime$ non cambi. $p\prime \in \C$ discrimina infatti, indipendentemente dal sistema di referimento, i diversi tipi di polarizzazione
 \begin{equation}\begin{cases}
-  \Re[p\prime] >0 & \text{\textbf{ellittica destrorsa}}\\
-  \Re[p\prime] <0 & \text{\textbf{ellittica sinistrorsa}}\\
-  \Re[p\prime] =0 & \text{\textbf{rettilinea "orizzontale"}}\\
-  \Re[p\prime] =\infty & \text{\textbf{rettilinea "verticale"}}\\
-  p = p\prime = 1 & \text{\textbf{circolare destrorsa}} \\
-  p = p\prime = 1 & \text{\textbf{circolare sinistrorsa}}
+  \Re[p\prime] >0 & \text{ellittica destrorsa} \\
+  \Re[p\prime] <0 & \text{ellittica sinistrorsa} \\
+  \Re[p\prime] =0 & \text{rettilinea ``orizzontale''} \\
+  \Re[p\prime] =\infty & \text{rettilinea ``verticale''} \\
+  p = p\prime = 1 & \text{circolare destrorsa} \\
+  p = p\prime = 1 & \text{circolare sinistrors}
 \end{cases}\end{equation}
-\textbf{\textsc{Nota Bene:}} la polarizzazione circolare prevede che $p=p\prime$ sia \textbf{puramente reale} e pari a $\pm1$
 
-Cerchiamo ora di valutare $\Re [p\prime]$:
-\begin{esp}
-  p\prime &= \jmath \frac{E_{y\prime}}{E_{x\prime}} = e^{\jmath \frac{\pi}{2}} \cdot \left \| \frac{E_{y\prime}}{E_{x\prime}} \right \|
+% \textbf{\textsc{Nota Bene}} la polarizzazione circolare prevede che $p=p\prime$ sia \textbf{puramente reale} e pari a $\pm1$
+
+Cerchiamo ora di valutare $\Re [p\prime]$
+\begin{esp*}
+  p\prime
+	&= \jmath \frac{E_{y\prime}}{E_{x\prime}} \\
+	& = e^{\jmath \frac{\pi}{2}} \cdot \left \| \frac{E_{y\prime}}{E_{x\prime}} \right \|
   \cdot e^{j(\Phi_{y\prime}-\Phi_{x\prime})} \\
   &= \left \| \frac{E_{y\prime}}{E_{x\prime}} \right \| \cdot e^{j(\frac{\pi}{2}+\Phi_{y\prime}-\Phi_{x\prime})}
-  \Re[p\prime]&= \left \| \frac{E_{y\prime}}{E_{x\prime}} \right \| \cdot \underbrace{cos(\frac{\pi}{2} + +\Phi_{y\prime}-\Phi_{x\prime})}_{\text{verso di polarizzazione}}
-\end{esp}
+\end{esp*}
+
+e dunque,
+\begin{esp*}
+	\Re[p\prime]
+	&= \left \| \frac{E_{y\prime}}{E_{x\prime}} \right \| \cdot \underbrace{\cos \left( \frac{\pi}{2} +\Phi_{y\prime}-\Phi_{x\prime} \right)}_{\text{verso di polarizzazione}}
+\end{esp*}
