Aggiunta parte potenziali elettromagnetici e minor fixes

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -128,6 +128,8 @@
 \renewcommand{\E}{\ensuremath{\vec{E}}}
 \renewcommand{\H}{\ensuremath{\vec{H}}}
 \renewcommand{\J}{\ensuremath{\vec{J}}}
+\newcommand{\M}{\ensuremath{\vec{M}}}
+\renewcommand{\A}{\ensuremath{\vec{A}}}
 
 %Derivatives shortcut
 \newcommand{\deriv}[3][]{% \deriv[<order>]{<func>}{<var>}
