--- a/antenne/introduzione.tex
+++ b/antenne/introduzione.tex
@@ -88,7 +88,7 @@ Definiamo ora cosa rappresentano i vettori sopra elencati:
   \item \textbf{$\jt$} è il vettore densità totale di corrente elettrica $\left[\frac{A}{m^2}\right]$
 \end{itemize}
 
-\subsubsection{Identità vettoriale e ultime due equazioni di Maxwell}
+\subsubsection{Identità vettoriale e ultime due equazioni di Maxwell} \label{sec:id-not}
 L'identità vettoriale $\diverg (\rot \vec{A}) = 0$ permette di ricavare
 dalle equazioni ai rotori, le equazioni alle divergenze. In particolare si trova che:
 \begin{equation}\begin{split}
