--- a/antenne/onde_piane.tex
+++ b/antenne/onde_piane.tex
@@ -28,13 +28,13 @@ Le onde piane sono particolari soluzioni delle equazioni di Maxwell che hanno pr
 
 	Esse sono affini alle ben note equazioni delle onde: la loro soluzione sarà perciò nella forma
 
-	\begin{equation*} \label{eq:helmotz_sol}
+	\begin{equation} \label{eq:helmotz_sol}
 		\begin{cases}
 			E_x(\r) = E_{ox} ~ e^{-\s \cdot \r} \\
 			E_y(\r) = E_{oy} ~ e^{-\s \cdot \r} \\
 			E_z(\r) = E_{oz} ~ e^{-\s \cdot \r}
 		\end{cases}
-	\end{equation*}
+	\end{equation}
 	dove $\r$ è il vettore reale che definisce la posizione del punto considerato, mentre $\s = (s_x, s_y, s_z)$ è detto vettore \emph{di spostamento} e definisce come il campo vari nello spazio in modulo e fase.
 
 	Sostituendo questa generica soluzione in \ref{eq:helmotz}, si ottiene la condizione che il parametro $\s$ deve soddisfare per essere un'effettiva soluzione.
