--- a/antenne/antenne_cap.tex
+++ b/antenne/antenne_cap.tex
@@ -104,3 +104,4 @@ Dobbiamo quindi determinare il valore di $\Phi$, cosa che faremo sfruttando la t
 Poiché le equazioni di Helmoltz trovate sono lineari, utilizzeremo spesso il principio di sovrapposizione degli effetti
 
 \section{Dipolo elementare}
+Partiamo analizzando il dipolo elementare, indicando la rappresentazione di un punto P attraverso il vettore posizione $\r$
