--- a/antenne/introduzione.tex
+++ b/antenne/introduzione.tex
@@ -20,10 +20,10 @@ Elenchiamo ora gli operatori che utilizzeremo, per poi definirli meglio in delle
   \item \textbf{Gradiente} $\nabla$
   \item \textbf{Laplaciano} $\nabla^2$
 \end{itemize}
-Iniziamo a descrivere cosa succede a un generico vettore $\vec{A}\left(\r\right)=\left(A_x(\r),A_y(\r),A_z(\r)\right)$.
+Iniziamo a descrivere cosa succede a un generico vettore $\A\left(\r\right)=\left(A_x(\r),A_y(\r),A_z(\r)\right)$.
 \subsection{Rotore}
 \begin{equation} \begin{split}
-  \rot \vec{A(\r)} &=
+  \rot \A(\r) &=
   \begin{vmatrix}
     \hat{x} &\hat{y} &\hat{z} \\
     \frac{\partial}{\partial x} & \frac{\partial}{\partial y} & \frac{\partial}{\partial z} \\
